# fastai_course1

./: README.md  run_container.sh
1/: bird_or_not_bird.ipynb
2/: 02-saving-a-basic-model.ipynb
2/project/ufo_detector/: README.md  main.py  pyproject.toml  train.ipynb
notes/: 1.md  2.md
