[tool.poetry]
name = "ufo-detector"
version = "0.1.0"
description = ""
authors = ["strf0x <brandon.bosch@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastai = "^2.7.18"
gradio = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
